[package]
name = "android-loader"
version = "0.2.0"
edition = "2021"

rust-version = "1.60"

[dependencies]
anyhow = "1.0"
# elf = "0.7.1"
lazy_static = "1.4.0"
libc = "0.2.139"
memmap2 = "0.5.8"
rand = "0.8.4"
region = "3.0.0"
sysv64 = { path = "./sysv64" }
xmas-elf = { git = "https://github.com/Dadoum/xmas-elf" }
zero = "0.1"